리뷰 개수 반환 리다이렉트문제 해결(#34)